--- a/css/canvas.css
+++ b/css/canvas.css
@@ -10,7 +10,9 @@ body {
     background-image: url(../assets/images/fondo3.png);
     background-size: cover;
     height: 100vh;
+    width: 100%;
     
+ 
     
 }
 
@@ -172,6 +174,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .cuerpoCanvas h1 {
@@ -237,7 +240,7 @@ strong {
 }
 /*GRID_CANVAS_DESK*/
 
-.container {
+.canvasContainer {
     display: grid;
     grid-template-areas: 
     "asociacionesClave actividadesClave propuestaValor relacionesClientes segmentosClientes"
@@ -245,8 +248,7 @@ strong {
 
     grid-template-rows: 1fr 1fr; 
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin: 3rem 1rem 3rem 1rem;
     justify-content: center;
     text-align: center;
     gap: 5px;
@@ -284,7 +286,7 @@ strong {
 
 /*imagenes*/
 
-.container textarea {
+.canvasContainer textarea {
     padding: 5px;
     box-shadow: 0px 0px 10px hsl(0, 0%, 100%, 30%);
     color: blue;
@@ -311,7 +313,7 @@ strong {
    
 }
 
-.formularioCompleto .container .tarjeta .frontCard__prop {
+.formularioCompleto .canvasContainer .tarjeta .frontCard__prop {
     position: absolute;
     background-position: center;
     width: 100%;
@@ -322,7 +324,7 @@ strong {
     backface-visibility: hidden; 
     
 }
-.formularioCompleto .container .tarjeta .frontCard__activ {
+.formularioCompleto .canvasContainer .tarjeta .frontCard__activ {
     position: absolute;
     background-position: center;
     width: 100%;
@@ -332,7 +334,7 @@ strong {
     radial-gradient(#9f8fe5,#cdb9ff );
     backface-visibility: hidden; 
 }
-.formularioCompleto .container .tarjeta .frontCard__asoc {
+.formularioCompleto .canvasContainer .tarjeta .frontCard__asoc {
     position: absolute;
     background-position: center;
     width: 100%;
@@ -342,7 +344,7 @@ strong {
     radial-gradient(#9f8fe5,#cdb9ff );
     backface-visibility: hidden; 
 }
-.formularioCompleto .container .tarjeta .frontCard__recursos {
+.formularioCompleto .canvasContainer .tarjeta .frontCard__recursos {
     position: absolute;
     background-position: center;
     width: 100%;
@@ -352,7 +354,7 @@ strong {
     radial-gradient(#9f8fe5,#cdb9ff );
     backface-visibility: hidden; 
 }
-.formularioCompleto .container .tarjeta .frontCard__relaciones {
+.formularioCompleto .canvasContainer .tarjeta .frontCard__relaciones {
     position: absolute;
     background-position: center;
     width: 100%;
@@ -362,7 +364,7 @@ strong {
     radial-gradient(#9f8fe5,#cdb9ff );
     backface-visibility: hidden; 
 }
-.formularioCompleto .container .tarjeta .frontCard__canales {
+.formularioCompleto .canvasContainer .tarjeta .frontCard__canales {
     position: absolute;
     background-position: center;
     width: 100%;
@@ -372,7 +374,7 @@ strong {
     radial-gradient(#9f8fe5,#cdb9ff );
     backface-visibility: hidden; 
 }
-.formularioCompleto .container .tarjeta .frontCard__segmen {
+.formularioCompleto .canvasContainer .tarjeta .frontCard__segmen {
     position: absolute;
     background-position: center;
     width: 100%;
@@ -415,19 +417,19 @@ strong {
 }
 
 
-.container .cajaAlta {
+.canvasContainer .cajaAlta {
     width: 285px;
     height: 562px;
     margin: 10px;
 }
 
-.container .cajaBaja {
+.canvasContainer .cajaBaja {
     width: 250px;
     height: 298px;
     margin: 10px;
 }
 
-.container::placeholder {
+.canvasContainer::placeholder {
     color: rgb(21, 31, 49);
     padding: 5px;
     text-shadow: 0.5px 0.5px 0.5px rgba(248, 247, 247, 0.596);
@@ -436,7 +438,7 @@ strong {
     backface-visibility: hidden;
 }
 
-.container .btn  {
+.canvasContainer .btn  {
     margin-top: 1rem;
     background-color: #90c5fd;
     border: none;
@@ -448,7 +450,7 @@ strong {
 
 }
 
-.container .card {
+.canvasContainer .card {
     background-color: #c0ddfc;
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
@@ -578,12 +580,34 @@ strong {
     margin-right: 30rem;
 }
 
-.foda textarea {
+.foda .tarjeta {
+    position: relative;
+    transform-style: preserve-3d;
+    transition: all 0.8s ease;
+}
+
+.foda .tarjeta:hover {
+    transform: rotateY(180deg);
+    background-color: #c8c0ee;
+    border-radius: 2rem;
+   
+   
+}
+.foda .tarjeta .backCard textarea {
     padding: 1rem;
     border-radius: 2rem;
     border:none;
+    transform-style: preserve-3d;
+    background-color: #c8c0ee;
 }
-
+.foda .tarjeta .backCard {
+    
+    transform: rotateY(180deg);
+    overflow: hidden;
+    backface-visibility: hidden;
+    
+    
+}
 /*Imagenes__foda*/
 
 .formularioCompleto .foda .tarjeta .frontCard__fortalezas {
@@ -849,15 +873,17 @@ strong {
 
 #piePagina{
     height: 100%;
-    width: 100%;
+    width:auto;
     background-color: #0033ff;
     
 }  
 #piePagina .pieArriba{
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     height: auto;
     width: auto;
-    margin-left: 15rem;
+    
 }
 #piePagina .pieArriba .ubicacionDiv{
     justify-content: center;
@@ -885,6 +911,7 @@ strong {
     -o-border-radius: 5px;
     filter: grayscale(50%);
     -webkit-filter: grayscale(50%);
+    
 }
 #piePagina .pieArriba .ubicacionDiv p{
     font-family: 'Open Sans', sans-serif;
@@ -901,7 +928,7 @@ strong {
     display: flex;
     flex-direction: column;
     height: auto;
-    margin-left: 5rem;
+    margin: 1rem;
 }
 #piePagina .pieArriba .infoDiv .aliados{
     text-align: center;
@@ -1073,54 +1100,59 @@ strong {
 
 /*MEDIA QUERY-----------------------------------------------------------------------------------------------------*/
 
+
 @media (max-width: 1024px){
-.container {
-    display: grid;
-    grid-template-areas: 
-    "propuestaValor"
-    "asociacionesClave" 
-    "actividadesClave" 
-    "recursosClave"  
-    "relacionesClientes"
-    "canales"
-    "segmentosClientes";
-   
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
-    grid-template-columns: 1fr;
-    margin-top: 3rem;
-    text-align: center;
-    justify-items: center;
+.canvasContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
 }
+    
 
     .propuestaValor {
-        grid-area: propuestaValor;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .asociacionesClave {
-        grid-area: asociacionesClave;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .actividadesClave {
-        grid-area: actividadesClave;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .recursosClave {
-        grid-area: recursosClave;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         
     }
 
     .relacionesClientes {
-        grid-area: relacionesClientes;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         
     }
 
     .canales {
-        grid-area: canales;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         
     }
 
     .segmentosClientes {
-        grid-area: segmentosClientes;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         
     }
 
@@ -1128,7 +1160,7 @@ strong {
     margin-top: 1rem;
 }
 
-    .container textarea {
+    .canvasContainer textarea {
         padding: 5px;
         box-shadow: 0px 0px 10px hsl(0, 0%, 100%, 30%);
         border: none;
@@ -1141,22 +1173,22 @@ strong {
         text-overflow: ellipsis;
     }
 
-    .container .cajaAlta {
+    .canvasContainer .cajaAlta {
         width: 75vw;
         height: 300px;
     }
     
-    .container .cajaBaja {
+    .canvasContainer .cajaBaja {
         width: 75vw;
         height: 300px;
     }
 
-    .formularioCompleto .container .tarjeta {
+    .formularioCompleto .canvasContainer .tarjeta {
         width: 80vw;
         height: 300px;
     }
 
-    .container .placeholder:hover {
+    .canvasContainer .placeholder:hover {
         color: rgb(21, 31, 49);
         padding: 5px;
         text-shadow: 0.5px 0.5px 0.5px rgba(248, 247, 247, 0.596);
@@ -1165,7 +1197,7 @@ strong {
         visibility: hidden;
     }
 
-    .container .btn {
+    .canvasContainer .btn {
         margin-top: 1rem;
         background-color: #90c5fd;
         border: none;
@@ -1177,15 +1209,16 @@ strong {
     }
 
     .btn:hover{
-        background-color: aqua;
+        background-color: rgb(164, 101, 247);
         transform: scale(1.5);
         transition:0.25s;
     }
 
-    .container .card {
+    .canvasContainer .card {
         background-color: #c0ddfc;
         text-align: center;
-        font-family: 'Montserrat', sans-serif; ;
+        font-family: 'Montserrat', sans-serif; 
+        width: 80vw;
     }
 
     textarea:hover {
@@ -1282,6 +1315,7 @@ strong {
     display: grid;
     justify-items: center;
     text-align:center;
+    align-self: center;
     grid-template-areas: 
     "fortaleza"
     "oportunidad"
@@ -1296,6 +1330,7 @@ strong {
 .fortalezas {
     grid-area: fortaleza;
     margin: 1rem;
+    
 }
 .oportunidades {
     grid-area: oportunidad;
@@ -1311,10 +1346,35 @@ strong {
     margin: 1rem;
 }
 
+.fortalezas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.oportunidades {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.debilidades {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.amenazas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
 .foda textarea {
     padding: 1rem;
     border-radius: 2rem;
     border:none;
+    width: 80vw;
+    height: 300px;
 }
 .tituloFoda {
     font-family: 'Montserrat', sans-serif;
@@ -1330,6 +1390,15 @@ strong {
     width: 80vw;
     height: 300px;
 }
+
+.foda .card {
+    background-color: #c0ddfc;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+    text-shadow: 0.5px 0.5px 0.5px rgba(250, 247, 247, 0.7);
+    width: 80vw;
+}
+
 /*MINDSET*/
 
 .mindsetTitulo{
@@ -1344,7 +1413,7 @@ strong {
 .mindsetCheck {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin-bottom: 10px;
     margin-top: 10px;
     margin-left: 5px;
@@ -1437,19 +1506,29 @@ strong {
         display: flex;
         flex-direction: column;
         align-items: center;
+        
+        
     }
 
     #piePagina .pieArriba {
         margin: 5px;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        
     }
     .pieArriba .mapa {
-        height: 170px;
-        width: 350;
+        
+        margin: 5px;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        width: fit-content;
     }
     #piePagina .pieArriba .infoDiv .imagenesAli{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        
         width: 100vw; 
         margin-top: 10rem;
         margin-bottom: 10rem;
@@ -1461,6 +1540,12 @@ strong {
     #piePagina .pieArriba .infoDiv .aliados .hr5{
         margin: 1rem 5px 1rem 5px;
     }
+    #piePagina .pieArriba .ubicacionDiv {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+
     #piePagina .pieArriba .ubicacionDiv h2{
         font-size: 20px;
     }
